fix scroll overflow

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,9 +11,10 @@
 		font-size: 0.8em
 		width: 100%
 		bottom: 5vh
-	.custom-text, .start-logo_subheading, .text-wrap, .section-3 p:first-child, .section-4 p, .section-5 p, .section-6 p, .row-figure figure figcaption, .section-title, .best-heading, .team-name, .best-heading.subheading, .best-content p, .section-title, .contact p, .section-subtitle, .how-box p
+	.custom-text, .start-logo_subheading, .text-wrap, .section-3 p:first-child, .section-4 p, .section-5 p, .section-6 p, .row-figure figure figcaption, .section-title, .best-heading, .team-name, .best-heading.subheading, .best-content p, .section-title, .contact p, .section-subtitle, .how-box p, .team-block_top-right p, .team-paragraph,.team-contact a
 		font-size: 1em
-	.how-box p
+	.how-box p,
+	.best-content p
 		font-size: 0.5em
 	.small, .section-3 p
 		font-size: 0.6em
@@ -37,9 +38,10 @@
 		font-size: 0.6em
 		width: 100%
 		bottom: 5vh
-	.custom-text, .start-logo_subheading, .text-wrap, .section-3 p:first-child, .section-4 p, .section-5 p, .section-6 p, .row-figure figure figcaption, .section-title, .best-heading, .team-name, .best-heading.subheading, .best-content p, .section-title, .contact p, .section-subtitle, .how-box p
+	.custom-text, .start-logo_subheading, .text-wrap, .section-3 p:first-child, .section-4 p, .section-5 p, .section-6 p, .row-figure figure figcaption, .section-title, .best-heading, .team-name, .best-heading.subheading, .best-content p, .section-title, .contact p, .section-subtitle, .how-box p, .team-block_top-right p, .team-paragraph,.team-contact a
 		font-size: 0.8em
-	.how-box p
+	.how-box p,
+	.best-content p
 		font-size: 0.5em
 	.small, .section-3 p
 		font-size: 0.6em
@@ -136,11 +138,16 @@
 		flex-direction: column
 	.how-box
 		width: 100%
+	.feedback-author img
+		margin-bottom: 0
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	.custom-text, .start-logo_subheading, .text-wrap, .section-3 p:first-child, .section-4 p, .section-5 p, .section-6 p, .row-figure figure figcaption, .section-title, .best-heading, .team-name, .best-heading.subheading, .best-content p, .section-title, .contact p, .section-subtitle, .how-box p
+	.custom-text, .start-logo_subheading, .text-wrap, .section-3 p:first-child, .section-4 p, .section-5 p, .section-6 p, .row-figure figure figcaption, .section-title, .best-heading, .team-name, .best-heading.subheading, .best-content p, .section-title, .contact p, .section-subtitle, .how-box p, .team-block_top-right p, .team-paragraph,.team-contact a
 		font-size: 0.7em
+	.how-box p,
+	.best-content p
+		font-size: 0.5em
 	.how-box p
 		font-size: 0.5em
 	.small, .section-3 p
@@ -148,13 +155,12 @@
 	.clients a
 		width: 12%
 		margin: 0 1% 15px
-	.team-paragraph,
-	.team-contact a
-		font-size: 0.8em
+	
 	.team-block
 		padding: 0 10px
 	.team-block_top-left
 		img
+			width: 70%
 			margin: 0 auto
 	.section-1 img
 		width: 50vw
@@ -164,17 +170,18 @@
 	.clients a
 		width: 20%
 	.row-figure figure img
-		max-width: 80px
+		max-width: 50px
 	.row-figure figure figcaption
-		font-size: 0.4em
+		font-size: 0.45em
 	.section-1 img
 		width: 60vw
-	.custom-text, .start-logo_subheading, .text-wrap, .section-3 p:first-child, .section-4 p, .section-5 p, .section-6 p, .row-figure figure figcaption, .section-title, .best-heading, .team-name, .best-heading.subheading, .best-content p, .section-title, .contact p, .section-subtitle, .how-box p
-		font-size: 0.6em
-	.how-box p
-		font-size: 0.5em
+	.custom-text, .start-logo_subheading, .text-wrap, .section-3 p:first-child, .section-4 p, .section-5 p, .section-6 p, .row-figure figure figcaption, .section-title, .best-heading, .team-name, .best-heading.subheading, .best-content p, .section-title, .contact p, .section-subtitle, .how-box p, .team-block_top-right p, .team-paragraph,.team-contact a
+		font-size: 0.4em
+	.how-box p,
+	.best-content p
+		font-size: 0.4em
 	.small, .section-3 p
-		font-size: 0.45em
+		font-size: 0.4em
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
