--- a/sass/main.sass
+++ b/sass/main.sass
@@ -317,7 +317,7 @@ body
 
 .section-7
 	min-height: 100vh
-	height: auto
+	height: 100%
 	display: -webkit-flex
 	display: -moz-flex
 	display: -ms-flex
